# rag-task

./: .gitignore  README.md
backend/: README.md  main.py  pyproject.toml
backend/app/: schemas.py
backend/app/api/v1/: __init__.py  documents.py  rag.py
backend/app/core/: llm_services.py  vector_store.py
data/: FastHTML_llms.txt  Langraph_llms.txt  vercel_llms.txt
frontend/: README.md  next.config.ts  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: types.ts
